--- a/ts-project/package.json
+++ b/ts-project/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/json-schema": "^7.0.15",
     "lite-server": "^2.6.1"
   },
   "description": ""
