--- a/ts-project/package.json
+++ b/ts-project/package.json
@@ -4,13 +4,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "lite-server"
+    "start": "webpack serve",
+    "build": "webpack --config webpack.config.prod.js" 
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/json-schema": "^7.0.15",
-    "lite-server": "^2.6.1"
+    "clean-webpack-plugin": "^4.0.0",
+    "lite-server": "^2.6.1",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.2",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "description": ""
 }
