--- a/ts-imports/package.json
+++ b/ts-imports/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "ts-project",
+  "name": "ts-imports",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve",
-    "build": "webpack --config webpack.config.prod.js"
+    "start": "webpack serve"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/json-schema": "^7.0.15",
-    "clean-webpack-plugin": "^4.0.0",
+    "@types/lodash": "^4.14.202",
     "lite-server": "^2.6.1",
+    "lodash": "^4.17.21",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.2",
     "webpack": "^5.89.0",
@@ -20,7 +20,8 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
-  },
-  "description": ""
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "reflect-metadata": "^0.1.13"
+  }
 }
